@@ -9,6 +9,8 @@ TODO: Fix abysmal performance of sfifo-based outputs.
    possibly other sfifo-based outputs like CoreAudio (those were poorly
    tested with buffer, as the combination is indeed unusual).
 -- Buffer pauses devices for prebuffering, to avoid underruns.
+-- More reliable playback with SDL, Portaudio and CoreAudio outputs.
+   This includes FIFO draining on close to avoid dropping of the end.
 -- Fixed memory leaks with some outputs where a call to the deinit()
    function is necessary during available/working module checking.
 - mpg123, out123: Use the default output flags to get OUT123_KEEP_PLAYING.
